--- a/Week 2 - Class 2 LAB.ipynb
+++ b/Week 2 - Class 2 LAB.ipynb
@@ -1166,6 +1166,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f339cfbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create this matrix:\n",
+    "# [[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n",
+    "\n",
+    "<your-answer> "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "613d4ad2",
    "metadata": {},
@@ -1211,7 +1224,7 @@
    "source": [
     "\n",
     "def rescale(input_array):\n",
-    "    \"\"\"Takes an array as input, and returns a corresponding array scaled so\n",
+    "    \"\"\"Takes an 1D array as input, and returns a corresponding array scaled so\n",
     "    that 0 corresponds to the minimum and 1 to the maximum value of the input array.\n",
     "\n",
     "    Examples:\n",
@@ -1224,6 +1237,28 @@
     "    <your-answer>\n",
     "    \n",
     "    return "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e68afdaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.,  25.,  50.,  75., 100.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.linspace(0, 100, 5)"
    ]
   },
   {
@@ -2386,7 +2421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.16 ('tf-py38')",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -2400,11 +2435,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5395b24c011b6be8266d8f5b848fa72ba88c74a4bc2c01f0d440a0d322d0c4eb"
+    "hash": "d33a1388bb95f6f47390937b44de6829ea073fadb3ed2a95296fdc5e4fdfba80"
    }
   }
  },
