lab 3 chanegs without big data

--- a/Week 2 - Class 2 LAB SOL.ipynb
+++ b/Week 2 - Class 2 LAB SOL.ipynb
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "id": "1dbb69da",
    "metadata": {},
    "outputs": [
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "841bd21e",
    "metadata": {},
    "outputs": [
@@ -1943,7 +1943,7 @@
        "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "id": "985a16fd",
    "metadata": {},
    "outputs": [
@@ -2006,18 +2006,38 @@
        "['apple', 'orange', 'cherry', 'kiwi', 'mango']"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#more than one expression\n",
     "[x if x != \"banana\" else \"orange\" for x in fruits]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
+   "id": "8313ea72",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1532974470.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [4], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    [x  for x in fruits if x != \"banana\" else \"orange\"]\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[x  for x in fruits if x != \"banana\" else \"orange\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "1a121b81",
    "metadata": {},
    "outputs": [
@@ -2035,7 +2055,7 @@
        " 'banana']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,6 +2072,30 @@
     "          t\n",
     "\n",
     "[t for x in xd for t in x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "10c689ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create this matrix:\n",
+    "# [[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n",
+    "\n",
+    "# Nested list comprehension\n",
+    "matrix = [[j for j in range(5)] for i in range(3)]\n",
+    " \n",
+    "print(matrix)"
    ]
   },
   {
@@ -2093,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "id": "2de9f5ed",
    "metadata": {},
    "outputs": [],
@@ -2117,45 +2161,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "id": "00234d78",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.arange(10.0)"
+    "#np.arange(10.0)\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 12,
    "id": "3edf077d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.11111111, 0.22222222, 0.33333333, 0.44444444,\n",
-       "       0.55555556, 0.66666667, 0.77777778, 0.88888889, 1.        ])"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rescale(matrix)\n",
+      "Cell \u001b[0;32mIn [7], line 12\u001b[0m, in \u001b[0;36mrescale\u001b[0;34m(input_array)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrescale\u001b[39m(input_array):\n\u001b[1;32m      2\u001b[0m     \u001b[39m\"\"\"Takes an array as input, and returns a corresponding array scaled so\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m    that 0 corresponds to the minimum and 1 to the maximum value of the input array.\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39m    array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ])\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m     x_new \u001b[39m=\u001b[39m (input_array \u001b[39m-\u001b[39;49m \u001b[39mmin\u001b[39;49m(input_array))  \u001b[39m/\u001b[39m (\u001b[39mmax\u001b[39m(input_array) \u001b[39m-\u001b[39m \u001b[39mmin\u001b[39m(input_array))\n\u001b[1;32m     14\u001b[0m     \u001b[39mreturn\u001b[39;00m x_new\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+     ]
     }
    ],
    "source": [
-    "rescale(np.arange(10.0))"
+    "rescale(matrix)"
    ]
   },
   {
@@ -3117,11 +3152,113 @@
     "\n",
     "A similar approach to this class can be found here: https://github.com/jakevdp/WhirlwindTourOfPython/tree/6f1daf714fe52a8dde6a288674ba46a7feed8816"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f363b2",
+   "metadata": {},
+   "source": [
+    "# Exercise Solution\n",
+    "1. select the title from US only\n",
+    "2. Add a genres and startYear columns (you should have here: titleid, title, region, startYear, genres)\n",
+    "3. Add the name of the director to the film ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79a03aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dataset description: https://www.kaggle.com/datasets/ashirwadsangwan/imdb-dataset\n",
+    "\n",
+    "title_akas = pd.read_csv(\"data/title_akas.tsv\", sep='\\t')\n",
+    "title_basic = pd.read_csv(\"data/title_basics.tsv\", sep='\\t')\n",
+    "title_principals = pd.read_csv(\"data/title_principals.tsv\", sep='\\t')\n",
+    "title_ratings = pd.read_csv(\"data/title_ratings.tsv\", sep='\\t')\n",
+    "name_basics = pd.read_csv(\"data/name_basics.tsv\", sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1417b889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_akas_US= title_akas[title_akas.region=='US']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651487c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_akas.shape, title_basic.shape, title_principals.shape, title_ratings.shape, name_basics.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae8a3465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_basic_aux=title_basic[['tconst','startYear', 'genres']]\n",
+    "title_basic_aux.rename({'tconst': 'titleId'}, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1743eb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_akas_US[['titleId',]].merge(title_basic_aux, on='titleId')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cab88f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_basics.knownForTitles=[x.split(',') for x in name_basics.knownForTitles]\n",
+    "name_basics=name_basics[name_basics.primaryProfession!=None]\n",
+    "name_basics.primaryProfession=[str(x).split(',') for x in name_basics.primaryProfession ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cca1d33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "name_basics=name_basics.explode('knownForTitles', ignore_index=True)\n",
+    "name_basics=name_basics.explode('primaryProfession', ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b0c9e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_basics[name_basics.primaryProfession=='director']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.16 ('tf-py38')",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -3135,11 +3272,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5395b24c011b6be8266d8f5b848fa72ba88c74a4bc2c01f0d440a0d322d0c4eb"
+    "hash": "d33a1388bb95f6f47390937b44de6829ea073fadb3ed2a95296fdc5e4fdfba80"
    }
   }
  },
