--- a/Week 3 - Class 3 LAB SOL.ipynb
+++ b/Week 3 - Class 3 LAB SOL.ipynb
@@ -114,7 +114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
+   "id": "38d51d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9999"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max([max(sequence) for sequence in train_data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "cc92d03a",
    "metadata": {},
    "outputs": [
@@ -128,63 +149,11 @@
     }
    ],
    "source": [
-    "# Retrieves a dict mapping words to their index in the IMDB dataset.\n",
-    "\n",
-    "word_index = imdb.get_word_index()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "988ad89e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('the', 1)]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check the word with index 1\n",
-    "\n",
-    "<your-answer>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14ebb541",
-   "metadata": {},
-   "source": [
-    "Note that the indices are offset by 3 because 0, 1, and 2 are reserved indices for “padding,” “start of sequence,” and “unknown.”"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "3c415bc9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a reverse dictionary (first the index and then the str value)\n",
-    "reverse_word_index = <your-answer>\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9671598",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print the string from the train sample (first one). Use the method .get(k, pass_value) to avoid errors\n",
-    "decoded_review = <your-answer>"
+    "word_index = imdb.get_word_index()\n",
+    "reverse_word_index = dict(\n",
+    "    [(value, key) for (key, value) in word_index.items()])\n",
+    "decoded_review = \" \".join(\n",
+    "    [reverse_word_index.get(i - 3, \"?\") for i in train_data[0]])"
    ]
   },
   {
@@ -210,38 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c3a5b3a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Vectorize the data: create the dataset to be ingested by the neural network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "0452a33e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25000"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(train_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "744763e9",
    "metadata": {},
    "outputs": [],
@@ -257,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "50e90040",
    "metadata": {},
    "outputs": [],
@@ -268,29 +206,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "c858a331",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 1., 1., ..., 0., 0., 0.],\n",
-       "       [0., 1., 1., ..., 0., 0., 0.],\n",
-       "       [0., 1., 1., ..., 0., 0., 0.],\n",
-       "       ...,\n",
-       "       [0., 1., 1., ..., 0., 0., 0.],\n",
-       "       [0., 1., 1., ..., 0., 0., 0.],\n",
-       "       [0., 1., 1., ..., 0., 0., 0.]])"
+       "array([0., 1., 1., ..., 0., 0., 0.])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train"
+    "x_train[0]"
    ]
   },
   {
@@ -310,15 +242,6 @@
    "metadata": {},
    "source": [
     "# Numbers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99dadcad",
-   "metadata": {},
-   "source": [
-    "Here is the info on the data:\n",
-    "https://keras.io/api/datasets/boston_housing/"
    ]
   },
   {
