--- a/Homeworks/HA_1_data_wrangling.ipynb
+++ b/Homeworks/HA_1_data_wrangling.ipynb
@@ -1,61 +1,52 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "S8U-JvQALsIZ"
+      },
       "source": [
         "# Homework 1: Data wrangling with python\n",
         "\n",
         "This assignemnet focus on text as data, with groupby, apply, and text vectorization focus.\n",
         "\n",
         "We will work with this dataset: http://groups.di.unipi.it/~gulli/AG_corpus_of_news_articles.html"
-      ],
-      "metadata": {
-        "id": "S8U-JvQALsIZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#get the dataset for the current directory of this notebook\n",
-        "!wget https://raw.githubusercontent.com/mhjabreel/CharCnn_Keras/master/data/ag_news_csv/train.csv\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qsPQlHaQqLs_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#get the dataset for the current directory of this notebook\n",
+        "!wget https://raw.githubusercontent.com/mhjabreel/CharCnn_Keras/master/data/ag_news_csv/train.csv\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EuHmDI6lqWJs"
+      },
+      "outputs": [],
       "source": [
         "#visualize the data\n",
         "import pandas as pd\n",
         "df = pd.read_csv(\"train.csv\", header=None)\n",
         "df.info()\n",
         "df.head()"
-      ],
-      "metadata": {
-        "id": "EuHmDI6lqWJs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MP_H9FpDqzJF"
+      },
+      "outputs": [],
       "source": [
         "# See how the apply is transforming the dataset\n",
         "df.columns = [\"label\", \"title\", \"lead\"]\n",
@@ -63,140 +54,123 @@
         "def replace_label(x):\n",
         "\treturn label_map[x]\n",
         "df[\"label\"] = df[\"label\"].apply(replace_label) "
-      ],
-      "metadata": {
-        "id": "MP_H9FpDqzJF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Print first rows\n",
-        "df.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "JI1FyObEsXSi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#Print first rows\n",
+        "df.head()"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1mQzLHZM4_hb"
+      },
       "source": [
         "Question 1 (15 points)\n",
         "\n",
         "implement a new column text which contains the lowercased title and lead"
-      ],
-      "metadata": {
-        "id": "1mQzLHZM4_hb"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# TODO implement a new column text which contains the lowercased title and lead\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6SdMdF91r8An"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# TODO implement a new column text which contains the lowercased title and lead\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "X0liWjYX5Foz"
+      },
       "source": [
         "Question 2 (15 points)\n",
         "\n",
         "print the number of documents for each label"
-      ],
-      "metadata": {
-        "id": "X0liWjYX5Foz"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# TODO print the number of documents for each label\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "I_j5Ye7WycB2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# TODO print the number of documents for each label\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DCX6yNF55HuA"
+      },
       "source": [
         "Question 3 (15 points)\n",
         "\n",
         "Create a new column with the number of words for each text"
-      ],
-      "metadata": {
-        "id": "DCX6yNF55HuA"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lkB5pRGWxMk4"
+      },
+      "outputs": [],
       "source": [
         "# TODO create a new column with the number of words for each text\n",
         "\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "lkB5pRGWxMk4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#SOLUTION\n",
-        "df['words_text']= df.text.apply(lambda x: len(str(x).split(' ')))"
-      ],
-      "metadata": {
-        "id": "2K6dRU_VMlka"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BbD0mW9b5LZL"
+      },
       "source": [
         "Question 4 (15 points)\n",
         "\n",
         "plot the average number of words per label "
-      ],
-      "metadata": {
-        "id": "BbD0mW9b5LZL"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# TODO plot the average number of words per label \n",
-        "# tip: https://queirozf.com/entries/pandas-dataframe-plot-examples-with-matplotlib-pyplot\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "2AhlsmZB5Klq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# TODO plot the average number of words per label \n",
+        "# tip: https://queirozf.com/entries/pandas-dataframe-plot-examples-with-matplotlib-pyplot\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "WTgNvWrx5Pab"
+      },
       "source": [
         "Question 5 (15 points)\n",
         "\n",
         "implement a function which counts how often a pattern appears in a text"
-      ],
-      "metadata": {
-        "id": "WTgNvWrx5Pab"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -222,6 +196,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QHLBflqMLaxL"
+      },
       "source": [
         "Question 6 (15 points)\n",
         "\n",
@@ -230,73 +207,75 @@
         "How long is the vocabulary for the whole dataset?\n",
         "\n",
         "tip: https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html"
-      ],
-      "metadata": {
-        "id": "QHLBflqMLaxL"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "P6vLRHaMOCXP"
+      },
+      "outputs": [],
       "source": [
         "#TODO: Create a vectorization of the dataset using the SKlearn CountVectorizer with the full vocabulary\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "P6vLRHaMOCXP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#TODO: How long is the vocabulary for the whole dataset?\n",
-        "\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "UiG7HOpWPYj4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#TODO: How long is the vocabulary for the whole dataset?\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "PBZwzwj0LSkx"
+      },
       "source": [
         "Question 7 (15 Points)\n",
         "\n",
         "Separate the vectorized dataset into training and testing dataset with a test size of 30%"
-      ],
-      "metadata": {
-        "id": "PBZwzwj0LSkx"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZjsqUvECNORt"
+      },
+      "outputs": [],
       "source": [
         "#TODO: Separate the vectorized dataset into training and testing dataset with a test size of 30%\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "ZjsqUvECNORt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Deliver in HTML"
-      ],
       "metadata": {
         "id": "l6BnoaK-LoFM"
-      }
+      },
+      "source": [
+        "Deliver in HTML"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Lv6dpCVu3Uho"
+      },
+      "outputs": [],
       "source": [
         "#HOW TO DELIVER: https://stackoverflow.com/questions/53460051/convert-ipynb-notebook-to-html-in-google-colab\n",
         "#download this notebook after all your answers and upload it to the files tab on the left\n",
@@ -307,12 +286,21 @@
         "\n",
         "#refresh the folder (not the page)\n",
         "#download the html"
-      ],
-      "metadata": {
-        "id": "Lv6dpCVu3Uho"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
