--- a/Homeworks/HA_1_data_wrangling.ipynb
+++ b/Homeworks/HA_1_data_wrangling.ipynb
@@ -187,7 +187,7 @@
         "    \n",
         "    def count_keyword_frequencies(x):\n",
         "        #TODO implement a function which counts how often a pattern appears in a text\n",
-        "        num_occurrences = x.count(keyword)\n",
+        "        num_occurrences = ...\n",
         "        return num_occurrences\n",
         "    # Now, we can print how often a keyword appears in the data\n",
         "    print (df[\"text\"].apply(count_keyword_frequencies).sum())\n",
@@ -294,11 +294,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.13",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "d33a1388bb95f6f47390937b44de6829ea073fadb3ed2a95296fdc5e4fdfba80"
+      }
     }
   },
   "nbformat": 4,
