--- a/Homeworks/HA_1_data_wrangling.ipynb
+++ b/Homeworks/HA_1_data_wrangling.ipynb
@@ -169,7 +169,7 @@
       "source": [
         "Question 5 (15 points)\n",
         "\n",
-        "implement a function which counts how often a pattern appears in a text"
+        "implement a function which counts how often a keyword appears in a text"
       ]
     },
     {
@@ -186,7 +186,7 @@
         "    print(keyword)\n",
         "    \n",
         "    def count_keyword_frequencies(x):\n",
-        "        #TODO implement a function which counts how often a pattern appears in a text\n",
+        "        #TODO implement a function which counts how often a keyword appears in a text\n",
         "        num_occurrences = ...\n",
         "        return num_occurrences\n",
         "    # Now, we can print how often a keyword appears in the data\n",
