--- a/Week 6 - Class 6 LAB.ipynb
+++ b/Week 6 - Class 6 LAB.ipynb
@@ -92,7 +92,8 @@
    "id": "2cdc2ce5",
    "metadata": {},
    "source": [
-    "- Basic Neural Network "
+    "- Basic Neural Network:\n",
+    "    - Check the parts of the model: definition, compile, fit, evaluate, predict"
    ]
   },
   {
@@ -1271,7 +1272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.16 ('tf-py38')",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -1285,11 +1286,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5395b24c011b6be8266d8f5b848fa72ba88c74a4bc2c01f0d440a0d322d0c4eb"
+    "hash": "d33a1388bb95f6f47390937b44de6829ea073fadb3ed2a95296fdc5e4fdfba80"
    }
   }
  },
