--- a/Week 7 - Class 7 LAB.ipynb
+++ b/Week 7 - Class 7 LAB.ipynb
@@ -633,7 +633,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.16 ('tf-py38')",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -647,12 +647,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5395b24c011b6be8266d8f5b848fa72ba88c74a4bc2c01f0d440a0d322d0c4eb"
+    "hash": "d33a1388bb95f6f47390937b44de6829ea073fadb3ed2a95296fdc5e4fdfba80"
    }
   }
  },
